--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -25,7 +25,7 @@
       <p>Version 0.0.1β</p>
 
       <h4>
-        Powered by Ionic - Angular 7.
+        Powered by Angular.
       </h4>
       <div class="container">
         <ion-item lines="none">
@@ -38,43 +38,27 @@
     </div>
   </div>
 
+  <mat-divider></mat-divider>
+  <div class="divider"></div>
+
   <!-- Content -->
   <div class="container content column justify-content align-items center">
-    <h3>for Teamwork</h3>
-    <p>
-      Lorem ipsum dolor sit amet, at omnis omnesque sit. Agam vulputate
-      philosophia mei et, dicant oblique copiosae sit no. Dicam vidisse vis eu,
-      nec ex esse imperdiet. Saperet gloriatur cu est, iuvaret feugiat salutatus
-      nam ea. Ut ridens putent vix, detracto euripidis nam eu. Feugiat inermis
-      prodesset eu nam, pri fabulas deseruisse dissentiet at. Eam te ullum
-      democritum sententiae, mei at ceteros accusam repudiare. Viderer denique
-      vim an, sale nemore cu sed. Ut vim vocent recusabo, alterum sapientem mea
-      ut. In sale corpora fastidii cum, ea nam euismod convenire. Sit ut alii
-      omnis debet, ea cum posse intellegebat. Ad vix apeirian patrioque, mazim
-      temporibus pri an. Ea erat invenire forensibus vis. Quo falli luptatum ut,
-      te sit noster comprehensam. Ceteros appetere eu pri, sed ea ipsum utinam
-      perfecto, ius causae perpetua quaerendum te. Lucilius prodesset definiebas
-      at quo, cu duo wisi expetenda referrentur. Nam populo definitiones ex, vel
-      ne partem aperiam diceret. Mea dico bonorum recusabo ut. Vel in dicunt
-      volumus minimum. Vidit illum omittam ne ius. Sea inani delectus euripidis
-      et. Mei paulo munere ponderum cu, stet senserit mel ea, has errem
-      explicari ne. No qui tibique erroribus repudiandae, insolens convenire
-      intellegam cum et. Essent salutatus te mei, pro debitis perpetua et. Ea
-      dicam comprehensam has. Alia liber contentiones per no. Est in magna
-      invenire, sit mutat augue omittam ei.
-    </p>
-  </div>
-
-  <!-- <div class="container content">
-    <div class="search">
-      <div class="img">
-        <img src="assets/images/app-search.png" />
+    <div class="container">
+      <div>
+        <h4>Landscape Mode</h4>
+        <p>World</p>
       </div>
-      <p>
-        Search
-      </p>
+      <div><img src="assets/images/app-landscape.png" /></div>
     </div>
-  </div> -->
+
+    <div class="container">
+      <div>
+        <h4>Landscape Mode</h4>
+        <p>World</p>
+      </div>
+      <div><img src="assets/images/app-landscape.png" /></div>
+    </div>
+  </div>
 
   <!-- Footer -->
   <div class="footer">
