--- a/src/app/site/pages/navigation/navigation.page.html
+++ b/src/app/site/pages/navigation/navigation.page.html
@@ -12,7 +12,7 @@
       <a
         mat-button
         target="_blank"
-        href="https://github.com/azure06/xClipboard"
+        href="https://github.com/azure06/infiniti-clips"
         class="github"
         >GitHub</a
       >
