--- a/src/app/site/pages/features/features.page.scss
+++ b/src/app/site/pages/features/features.page.scss
@@ -23,9 +23,8 @@
 
 //  Header
 .header {
-  background: rgba(248, 248, 252, 1);
-  padding: 4vw 6vw 0 6vw;
-  min-height: 560px;
+  padding: 3vw 6vw 0 6vw;
+  min-height: 540px;
 
   p {
     font-size: 0.7rem;
@@ -40,7 +39,7 @@
   div:last-child {
     padding: 2vw;
     img {
-      box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.07);
+      box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.07);
       width: 420px;
       height: auto;
       border-radius: 10px;
@@ -48,18 +47,21 @@
   }
 }
 
+.divider {
+  width: 100%;
+  min-height: 64px;
+  background-color: rgba(0, 0, 0, 0.07);
+}
+
 // Content
 .content {
-  margin: 25px;
-  // .search {
-  //   display: flex;
-  //   justify-content: space-evenly;
-  //   padding: 20px;
-  //   img {
-  //     box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.07);
-  //     border-radius: 10px;
-  //   }
-  // }
+  padding: 25px;
+  img {
+    box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.07);
+    width: auto;
+    height: auto;
+    border-radius: 10px;
+  }
 }
 
 // Footer
@@ -97,7 +99,7 @@ h1 {
   text-align: center;
 }
 h4 {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: 300;
   padding: 30px;
   color: var(--text-color--extra-light);
