--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -43,18 +43,28 @@
 
   <!-- Content -->
   <div class="container content column justify-content align-items center">
-    <div class="container">
+    <div class="container item">
       <div>
-        <h4>Landscape Mode</h4>
-        <p>World</p>
+        <h2>Landscape Mode</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
       </div>
       <div><img src="assets/images/app-landscape.png" /></div>
     </div>
 
-    <div class="container">
+    <div class="container item">
       <div>
-        <h4>Landscape Mode</h4>
-        <p>World</p>
+        <h2>Landscape Mode</h2>
+        <p>
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+          dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est
+          laborum.
+        </p>
       </div>
       <div><img src="assets/images/app-landscape.png" /></div>
     </div>
