--- a/src/app/site/pages/features/features.page.scss
+++ b/src/app/site/pages/features/features.page.scss
@@ -25,40 +25,69 @@
 .header {
   padding: 3vw 6vw 0 6vw;
   min-height: 540px;
-
+  h1 {
+    text-transform: uppercase;
+    font-size: 2.6rem;
+    font-weight: 900;
+    color: var(--ion-color-tertiary);
+    text-align: center;
+  }
+  h4 {
+    font-size: 1.3rem;
+    font-weight: 300;
+    padding: 30px;
+    color: var(--text-color--extra-light);
+    text-align: center;
+    max-width: 50vw;
+  }
   p {
+    font-weight: 300;
+    color: var(--text-color--extra-light);
     font-size: 0.7rem;
   }
-
   button {
     margin: 50px 10px 15px 10px;
     min-width: 240px;
     min-height: 60px;
   }
-
   div:last-child {
     padding: 2vw;
     img {
       box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.07);
-      width: 420px;
+      width: 380px;
       height: auto;
       border-radius: 10px;
     }
   }
 }
 
-.divider {
-  width: 100%;
-  min-height: 64px;
-  background-color: rgba(0, 0, 0, 0.07);
-}
-
 // Content
 .content {
-  padding: 25px;
+  .item {
+    padding: 50px;
+    div {
+      flex: 1 1 0;
+      padding: 50px;
+    }
+  }
+  .item:nth-child(odd) {
+    background-color: rgba(248, 248, 248, 1);
+  }
+  h2 {
+    text-transform: uppercase;
+    font-size: 2.4rem;
+    font-weight: 900;
+    color: var(--text-color--light);
+    text-align: center;
+  }
+  p {
+    font-weight: 300;
+    color: var(--text-color--extra-light);
+    font-size: 1.3rem;
+  }
   img {
     box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.07);
-    width: auto;
+    width: 600px;
     height: auto;
     border-radius: 10px;
   }
@@ -84,29 +113,4 @@ ion-item {
 }
 ion-icon {
   font-size: 36px;
-}
-
-h2,
-h4 {
-  max-width: 50vw;
-}
-
-h1 {
-  text-transform: uppercase;
-  font-size: 2.6rem;
-  font-weight: 900;
-  color: var(--ion-color-tertiary);
-  text-align: center;
-}
-h4 {
-  font-size: 1.3rem;
-  font-weight: 300;
-  padding: 30px;
-  color: var(--text-color--extra-light);
-  text-align: center;
-}
-
-p {
-  font-weight: 300;
-  color: var(--text-color--extra-light);
 }
