add website images

--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -23,15 +23,6 @@
         <button mat-raised-button>Dowload for Mac</button>
       </div>
       <p>Version 0.0.1β</p>
-
-      <h4>
-        Powered by Angular.
-      </h4>
-      <div class="container">
-        <ion-item lines="none">
-          <ion-icon name="logo-angular"></ion-icon>
-        </ion-item>
-      </div>
     </div>
     <div>
       <img src="assets/images/app-main.png" />
@@ -43,9 +34,20 @@
 
   <!-- Content -->
   <div class="container content column justify-content align-items center">
-    <div class="container item">
+    <div class="container justify-content flex-wrap center item">
+      <div><img src="assets/images/app-landscape.png" /></div>
       <div>
         <h2>Landscape Mode</h2>
+        <p>
+          Go deeper into everything you look with landscape mode. Place the app
+          in your favorite position of the desktop.
+        </p>
+      </div>
+    </div>
+
+    <div class="container justify-content flex-wrap center item">
+      <div>
+        <h2>Browse your pictures</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -53,20 +55,7 @@
           aliquip ex ea commodo consequat.
         </p>
       </div>
-      <div><img src="assets/images/app-landscape.png" /></div>
-    </div>
-
-    <div class="container item">
-      <div>
-        <h2>Landscape Mode</h2>
-        <p>
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-          dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est
-          laborum.
-        </p>
-      </div>
-      <div><img src="assets/images/app-landscape.png" /></div>
+      <div><img src="assets/images/app-images.png" /></div>
     </div>
   </div>
 
