--- a/src/app/site/pages/features/features.page.scss
+++ b/src/app/site/pages/features/features.page.scss
@@ -33,7 +33,8 @@
     text-align: center;
   }
   h4 {
-    font-size: 1.3rem;
+    line-height: 1.2;
+    font-size: 1.2rem;
     font-weight: 300;
     padding: 30px;
     color: var(--text-color--extra-light);
@@ -64,10 +65,13 @@
 // Content
 .content {
   .item {
+    width: 100%;
     padding: 50px;
     div {
+      min-width: 600px;
       flex: 1 1 0;
       padding: 50px;
+      max-width: 30%;
     }
   }
   .item:nth-child(odd) {
@@ -83,7 +87,9 @@
   p {
     font-weight: 300;
     color: var(--text-color--extra-light);
-    font-size: 1.3rem;
+    line-height: 1.5;
+    font-size: 1.2rem;
+    text-align: center;
   }
   img {
     box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.07);
@@ -96,6 +102,7 @@
 // Footer
 .footer {
   p {
+    color: var(--text-color--extra-light);
     font-size: 0.7rem;
   }
   img {
