minor home page fix

--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -47,13 +47,10 @@
 
     <div class="container justify-content flex-wrap center item">
       <div>
-        <h2>Browse your pictures</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
-        </p>
+        <h2>
+          All you need just in one place
+        </h2>
+        <p>Browse, search, bookmark, and more...</p>
       </div>
       <div><img src="assets/images/app-images.png" /></div>
     </div>
