add share module

--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -56,6 +56,17 @@
     </div>
   </div>
 
+  <div class="container justify-content center column share">
+    <div class="container justify-content center">
+      <p>share infiniti clips</p>
+    </div>
+    <div class="container justify-content center">
+      <share-button button="facebook" theme="circles-light"></share-button>
+      <share-button button="twitter" theme="circles-light"></share-button>
+      <share-button button="linkedin" theme="circles-light"></share-button>
+      <share-button button="line" theme="circles-light"></share-button>
+    </div>
+  </div>
   <!-- Footer -->
   <div class="footer">
     <mat-toolbar>
