--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -1,6 +1,8 @@
 <ion-content class="light-theme">
   <!-- Header -->
-  <div class="container flex-start space-evenly flex-wrap header">
+  <div
+    class="container flex-start space-evenly flex-wrap align-items center header"
+  >
     <div class="container column justify-content align-items center">
       <h1>A seamless clipboard</h1>
       <h4>
@@ -34,7 +36,7 @@
 
   <!-- Content -->
   <div class="container content column justify-content align-items center">
-    <div class="container justify-content flex-wrap center item">
+    <div class="container justify-content align-items flex-wrap center item">
       <div><img src="assets/images/app-landscape.png" /></div>
       <div>
         <h2>Landscape Mode</h2>
@@ -45,7 +47,7 @@
       </div>
     </div>
 
-    <div class="container justify-content flex-wrap center item">
+    <div class="container justify-content align-items flex-wrap center item">
       <div>
         <h2>
           All you need just in one place
@@ -58,7 +60,7 @@
 
   <div class="container justify-content center column share">
     <div class="container justify-content center">
-      <p>share infiniti clips</p>
+      <p><span>share</span> infiniti clips</p>
     </div>
     <div class="container justify-content center">
       <share-button button="facebook" theme="circles-light"></share-button>
