--- a/src/app/site/pages/features/features.page.scss
+++ b/src/app/site/pages/features/features.page.scss
@@ -39,7 +39,6 @@
     padding: 30px;
     color: var(--text-color--extra-light);
     text-align: center;
-    max-width: 50vw;
   }
   p {
     font-weight: 300;
@@ -66,12 +65,14 @@
 .content {
   .item {
     width: 100%;
-    padding: 50px;
+    padding: 4vw 6vw 4vw 6vw;
+    @media (max-width: 1100px) {
+      flex-direction: column;
+    }
     div {
-      min-width: 600px;
+      padding: 2vw;
+      text-align: center;
       flex: 1 1 0;
-      padding: 50px;
-      max-width: 30%;
     }
   }
   .item:nth-child(odd) {
@@ -111,6 +112,9 @@
       font-size: 0.8rem;
       text-align: center;
       user-select: none;
+      span {
+        font-weight: 300;
+      }
     }
   }
   padding: 20px;
