--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -36,8 +36,12 @@
 
   <!-- Content -->
   <div class="container content column justify-content align-items center">
-    <div class="container justify-content align-items flex-wrap center item">
-      <div><img src="assets/images/app-landscape.png" /></div>
+    <div
+      class="container justify-content center align-items flex-start flex-wrap item"
+    >
+      <div class="container justify-content center align-items flex-start">
+        <img src="assets/images/app-landscape.png" />
+      </div>
       <div>
         <h2>Landscape Mode</h2>
         <p>
@@ -47,14 +51,18 @@
       </div>
     </div>
 
-    <div class="container justify-content align-items flex-wrap center item">
+    <div
+      class="container justify-content center align-items flex-start flex-wrap item"
+    >
       <div>
         <h2>
           All you need just in one place
         </h2>
         <p>Browse, search, bookmark, and more...</p>
       </div>
-      <div><img src="assets/images/app-images.png" /></div>
+      <div class="container justify-content center align-items flex-start">
+        <img src="assets/images/app-images.png" />
+      </div>
     </div>
   </div>
 
