--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -32,12 +32,11 @@
   </div>
 
   <mat-divider></mat-divider>
-  <div class="divider"></div>
 
   <!-- Content -->
-  <div class="container content column justify-content align-items center">
-    <div class="container justify-content align-items flex-wrap center item">
-      <div><img src="assets/images/app-landscape.png" /></div>
+  <div class="container content">
+    <div class="container item">
+      <div class="img"><img src="assets/images/app-landscape.png" /></div>
       <div>
         <h2>Landscape Mode</h2>
         <p>
@@ -47,17 +46,18 @@
       </div>
     </div>
 
-    <div class="container justify-content align-items flex-wrap center item">
+    <div class="container item">
       <div>
         <h2>
           All you need just in one place
         </h2>
         <p>Browse, search, bookmark, and more...</p>
       </div>
-      <div><img src="assets/images/app-images.png" /></div>
+      <div class="img"><img src="assets/images/app-images.png" /></div>
     </div>
   </div>
 
+  <!-- Share -->
   <div class="container justify-content center column share">
     <div class="container justify-content center">
       <p><span>share</span> infiniti clips</p>
@@ -69,6 +69,7 @@
       <share-button button="line" theme="circles-light"></share-button>
     </div>
   </div>
+
   <!-- Footer -->
   <div class="footer">
     <mat-toolbar>
