--- a/src/app/site/pages/features/features.page.scss
+++ b/src/app/site/pages/features/features.page.scss
@@ -27,7 +27,7 @@
   min-height: 540px;
   h1 {
     text-transform: uppercase;
-    font-size: 2.6rem;
+    font-size: 2rem;
     font-weight: 900;
     color: var(--ion-color-tertiary);
     text-align: center;
@@ -46,7 +46,7 @@
     font-size: 0.7rem;
   }
   button {
-    margin: 50px 10px 15px 10px;
+    margin: 1vw;
     min-width: 240px;
     min-height: 60px;
   }
@@ -63,34 +63,44 @@
 
 // Content
 .content {
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   .item {
     width: 100%;
     padding: 4vw 6vw 4vw 6vw;
-    @media (max-width: 1100px) {
+    justify-content: center;
+    align-items: center;
+    @media screen and (max-width: 1100px) {
       flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
     }
     div {
-      padding: 2vw;
-      text-align: center;
-      flex: 1 1 0;
+      width: 600px;
+      padding: 20px;
+      @media screen and (max-width: 700px) {
+        width: 100%;
+      }
     }
   }
   .item:nth-child(odd) {
     background-color: rgba(248, 248, 248, 1);
+    @media screen and (max-width: 1100px) {
+      flex-direction: column-reverse;
+    }
   }
   h2 {
     text-transform: uppercase;
-    font-size: 2.4rem;
+    font-size: 1.8rem;
     font-weight: 900;
     color: var(--text-color--light);
-    text-align: center;
   }
   p {
     font-weight: 300;
     color: var(--text-color--extra-light);
     line-height: 1.5;
     font-size: 1.2rem;
-    text-align: center;
   }
   img {
     box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.07);
