--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -34,7 +34,7 @@
   <mat-divider></mat-divider>
 
   <!-- Content -->
-  <div class="container content">
+  <div class="container content justify-content align-items column center">
     <div class="container item">
       <div><img src="assets/images/app-landscape.png" /></div>
       <div>
