--- a/src/app/site/pages/features/features.page.scss
+++ b/src/app/site/pages/features/features.page.scss
@@ -71,6 +71,7 @@
   align-items: center;
   flex-direction: column;
   .item {
+    width: 100%;
     padding: 4vw 6vw 4vw 6vw;
     justify-content: center;
     align-items: center;
