--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -38,20 +38,19 @@
     <div class="container item">
       <div><img src="assets/images/app-landscape.png" /></div>
       <div>
+        <h2>
+          All you need just in one place
+        </h2>
+        <p>Browse, search, bookmark, and more...</p>
+      </div>
+    </div>
+    <div class="container item">
+      <div>
         <h2>Landscape Mode</h2>
         <p>
           Go deeper into everything you look with landscape mode. Place the app
           in your favorite position of the desktop.
         </p>
-      </div>
-    </div>
-
-    <div class="container item">
-      <div>
-        <h2>
-          All you need just in one place
-        </h2>
-        <p>Browse, search, bookmark, and more...</p>
       </div>
       <div><img src="assets/images/app-images.png" /></div>
     </div>
@@ -78,7 +77,7 @@
     <mat-toolbar>
       <p>Released under MIT License | Copyright @ 2019</p>
       <span class="spacer"></span>
-      <p>About</p>
+      <a href="privacy">Privacy</a>
     </mat-toolbar>
   </div>
 </ion-content>
