--- a/src/app/site/pages/features/features.page.scss
+++ b/src/app/site/pages/features/features.page.scss
@@ -83,7 +83,7 @@
     div {
       width: 600px;
       padding: 20px;
-      @media screen and (max-width: 700px) {
+      @media screen and (max-width: 768px) {
         width: 100%;
       }
     }
@@ -136,6 +136,7 @@
 
 // Footer
 .footer {
+  a,
   p {
     color: var(--text-color--extra-light);
     font-size: 0.7rem;
