--- a/src/app/pages/clipboard/clipboard.page.html
+++ b/src/app/pages/clipboard/clipboard.page.html
@@ -19,10 +19,7 @@
       <ion-button color="tertiary">
         <ion-icon name="contact"></ion-icon>
       </ion-button>
-      <ion-button
-        (click)="navigateForward('/preferences/iam')"
-        color="tertiary"
-      >
+      <ion-button (click)="navigateRoot('/preferences/iam')" color="tertiary">
         <ion-icon name="settings"></ion-icon>
       </ion-button>
     </ion-buttons>
