minor change to preferences

--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -20,9 +20,9 @@
 
       <div class="container flex-wrap space-evenly">
         <button mat-raised-button color="primary">
-          Dowload for Windows (64Bit)
+          Download for Windows (64Bit)
         </button>
-        <button mat-raised-button>Dowload for Mac</button>
+        <button mat-raised-button>Download for Mac</button>
       </div>
       <p>Version 0.0.1β</p>
     </div>
