--- a/src/app/pages/clipboard-history/clipboard-history.page.html
+++ b/src/app/pages/clipboard-history/clipboard-history.page.html
@@ -3,6 +3,7 @@
   <ion-progress-bar *ngIf="loading" type="indeterminate"></ion-progress-bar>
   <app-clipboard-item-component
     *ngFor="let clip of (clips$ | async); let i = index"
+    (copyToClipboard)="copyToClipboard($event)"
     (modifyClip)="modifyClip($event)"
     (removeClip)="removeClip($event)"
     (translateText)="translateText($event)"
