fix google translate bug

--- a/src/app/pages/clipboard-bookmark/clipboard-bookmark.page.html
+++ b/src/app/pages/clipboard-bookmark/clipboard-bookmark.page.html
@@ -5,6 +5,7 @@
   <!--  <ion-content padding> -->
   <app-clipboard-item-component
     *ngFor="let clip of (clips$ | async); let i = index"
+    (copyToClipboard)="copyToClipboard($event)"
     (modifyClip)="modifyClip($event)"
     (removeClip)="removeClip($event)"
     (translateText)="translateText($event)"
