--- a/src/app/site/pages/features/features.page.html
+++ b/src/app/site/pages/features/features.page.html
@@ -1,10 +1,9 @@
 <ion-content class="light-theme">
   <!-- Header -->
-  <div
-    class="container flex-start space-evenly flex-wrap align-items center header"
-  >
+  <div class="container justify-content align-items center header">
     <div class="container column justify-content align-items center">
       <h1>A seamless clipboard</h1>
+      <h2>(Available soon...)</h2>
       <h4>
         Infiniti Clips is a free, open source hybrid clipboard application
         available for Windows and macOS.
@@ -17,17 +16,13 @@
           <ion-icon name="logo-apple"></ion-icon>
         </ion-item>
       </div>
-
       <div class="container flex-wrap space-evenly">
-        <button mat-raised-button color="primary">
+        <button mat-raised-button color="primary" disabled>
           Download for Windows (64Bit)
         </button>
-        <button mat-raised-button>Download for Mac</button>
+        <button mat-raised-button disabled>Download for Mac</button>
       </div>
       <p>Version 0.0.1β</p>
-    </div>
-    <div>
-      <img src="assets/images/app-main.png" />
     </div>
   </div>
 
