--- a/src/app/site/pages/navigation/navigation.page.scss
+++ b/src/app/site/pages/navigation/navigation.page.scss
@@ -25,6 +25,7 @@
   flex: 1 1 auto;
 }
 
-.container/deep/ion-content {
+.container.router {
+  position: relative;
   height: calc(100% - 66px);
 }
