--- a/src/app/site/pages/features/features.page.scss
+++ b/src/app/site/pages/features/features.page.scss
@@ -35,9 +35,9 @@
     text-align: center;
   }
   h2 {
-    font-size: 1.2rem;
-    color: var(--ion-color-primary);
-    font-weight: 300;
+    font-size: 1rem;
+    color: var(--text-color--extra-light);
+    font-weight: 600;
   }
   h4 {
     line-height: 1.2;
