add firebase to project

--- a/src/app/site/pages/navigation/navigation.page.scss
+++ b/src/app/site/pages/navigation/navigation.page.scss
@@ -8,10 +8,10 @@
     margin-right: 3rem;
     font-size: 1rem;
     text-transform: uppercase;
-    color: var(--ion-color-tertiary);
+    color: #8a99b8;
   }
   img {
-    // filter: brightness(2.5) hue-rotate(-10deg) saturate(0.5);
+    filter: brightness(2.5) hue-rotate(-10deg) saturate(0.5);
     width: 54px;
   }
 
