--- a/src/app/site/pages/navigation/navigation.page.scss
+++ b/src/app/site/pages/navigation/navigation.page.scss
@@ -1,8 +1,10 @@
 .nav-bar {
   color: var(--ion-color-tertiary);
   background-color: rgba(255, 255, 255, 0.7);
-  margin-bottom: 2px;
-  box-shadow: 0 0 3px 0px rgba(0, 5, 35, 0.09);
+  margin-bottom: 2px; // border
+  button {
+    display: none;
+  }
   h2 {
     font-weight: 700;
     margin-right: 3rem;
@@ -19,6 +21,24 @@
     color: var(--text-color--light);
     font-size: 0.8rem;
   }
+
+  @media only screen and (min-width: 721px) {
+    box-shadow: 0 0 3px 0px rgba(0, 5, 35, 0.09);
+    button {
+      display: inline;
+    }
+  }
+
+  &.small {
+    display: none;
+    @media only screen and (max-width: 720px) {
+      display: flex;
+    }
+    button {
+      display: inline;
+      flex: 1 1 0;
+    }
+  }
 }
 
 .spacer {
@@ -29,7 +49,10 @@
   position: relative;
 
   @media only screen and (max-width: 599px) {
-    height: calc(100% - 56px);
+    height: calc(100% - 92px);
+  }
+  @media only screen and (max-width: 720px) {
+    height: calc(100% - 104px);
   }
   @media only screen and (min-width: 600px) {
     height: calc(100% - 66px);
